Task 1 fixed from toList to collect with new List of surnames