@@ -4,6 +4,7 @@ import org.example.model.Person;
 import org.example.service.TaskService;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class TaskOneServiceImpl implements TaskService {
     private final int PEOPLE_QUANTITY = 100;
@@ -20,11 +21,12 @@ public class TaskOneServiceImpl implements TaskService {
                     "Surname" + random.nextInt(MAX_AGE),
                     random.nextInt(MAX_AGE - MIN_AGE) + MIN_AGE));
         }
-        people.stream().filter(person -> person.getAge() < SELECTED_AGE)
+        List<String> filteredPeopleSurnames = people.stream().filter(person -> person.getAge() < SELECTED_AGE)
                 .peek(System.out::println)
                 .sorted(Comparator.comparing(Person::getSurname).thenComparing(Person::getName))
                 .limit(4)
-                .map(Person::getSurname).toList().forEach(System.out::println);
-
+                .map(person -> person.getSurname())
+                .collect(Collectors.toList());
+        filteredPeopleSurnames.forEach(System.out::println);
     }
 }
